--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,13 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: #E4F6ED;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  padding: 20px;
 }
 
 @layer utilities {
